--- a/FixITPagliu/app/build.gradle
+++ b/FixITPagliu/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -35,5 +36,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.4'
     apply plugin: 'com.google.gms.google-services'
+
+    //  AndroidX appCompat
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    //  Material Design
+    implementation 'com.google.android.material:material:1.0.0'
+    //  Navigation
+    implementation "androidx.navigation:navigation-fragment:2.3.0"
+    implementation "androidx.navigation:navigation-ui:2.3.0"
 
 }
