--- a/FixITPagliu/app/src/main/AndroidManifest.xml
+++ b/FixITPagliu/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.fix_it_pagliu">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,14 +15,23 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDSQFAFaeBgXBdZa0baYTuDPqlbqIDHA6o" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".user.LatestNews"/>
-        <activity android:name=".user.reports.SendReport"/>
+        <activity android:name=".user.LatestNews" />
+        <activity android:name=".user.MapZone" />
+        <activity android:name=".user.reports.SendReport" />
         <activity android:name=".LoginEmployee" />
         <activity android:name=".user.Register" />
         <activity android:name=".MainActivity" />
