--- a/FixITPagliu/app/build.gradle
+++ b/FixITPagliu/app/build.gradle
@@ -52,4 +52,10 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:2.3.0"
     implementation "androidx.navigation:navigation-ui:2.3.0"
 
+    //  FirebaseRecyclerOptions
+    implementation 'com.firebaseui:firebase-ui-database:4.2.1'
+
+    //  recycler
+    //implementation 'com.google.android.material:material:1.3.0-alpha02'
+
 }
