--- a/FixITPagliu/app/build.gradle
+++ b/FixITPagliu/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     //  recycler
     //implementation 'com.google.android.material:material:1.3.0-alpha02'
 
+    //  Graphview
+    implementation 'com.jjoe64:graphview:4.2.2'
+
 }
