--- a/FixITPagliu/app/src/main/AndroidManifest.xml
+++ b/FixITPagliu/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
         <activity android:name=".user.reports.OpenReports" />
         <activity android:name=".user.news.PostListActivity" />
         <activity android:name=".user.reports.ReopenReport" />
+        <activity android:name=".StatsReports" />
+        <activity android:name=".user.reports.Vote" />
         <activity android:name=".user.MapZone" />
         <activity android:name=".user.reports.SendReport" />
         <activity android:name=".LoginEmployee" />
